name:                spyder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jsarracino/spyder#readme
license:             BSD3
license-file:        LICENSE
author:              John Sarracino
maintainer:          jsarraci@cs.ucsd.edu
copyright:           2017 John Sarracino
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Language.Spyder.AST,
    Language.Spyder.AST.Imp,
    Language.Spyder.AST.Spec,
    Language.Spyder.AST.Component,
    Language.Spyder.Parser,
    Language.Spyder.Parser.Lexer,
    Language.Spyder.Parser.Parser,
    Language.Spyder.Pretty,
    Language.Spyder.Pretty.Printer,
    Language.Spyder.Synth,
    Language.Spyder.Translate
  build-depends: base >= 4.7 && < 5
               , parsec
               , pretty
               , language-boogie
               , containers
               , ansi-wl-pprint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spyder -Wall -fno-warn-missing-signatures -fno-warn-dodgy-exports -fno-warn-unused-do-bind
  default-language:    Haskell2010

executable spyder
  hs-source-dirs:      src/Language
  main-is:             Spyder.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spyder -Wall -fno-warn-missing-signatures -fno-warn-dodgy-exports -fno-warn-unused-do-bind -main-is Spyder
  build-depends:       base
                     , spyder
                     , parsec
                     , pretty
                     , language-boogie
                     , containers
  default-language:    Haskell2010

test-suite spyder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spyder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsarracino/language-typescript
