name:                spyder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jsarracino/spyder#readme
license:             BSD3
license-file:        LICENSE
author:              John Sarracino
maintainer:          jsarraci@cs.ucsd.edu
copyright:           2017 John Sarracino
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Language.Spyder.AST,
    Language.Spyder.AST.Imp,
    Language.Spyder.AST.Spec,
    Language.Spyder.AST.Component,
    Language.Spyder.Parser,
    Language.Spyder.Parser.Lexer,
    Language.Spyder.Parser.Parser,
    Language.Spyder.Pretty,
    Language.Spyder.Pretty.Printer,
    Language.Spyder.Synth,
    Language.Spyder.Translate,
    Language.Spyder.Translate.Desugar,
    Language.Spyder.Translate.Main,
    Language.Spyder.Translate.Derived,
    Language.Spyder.Translate.Rename
  build-depends: base >= 4.7 && < 5
               , parsec
               , pretty
               , language-boogie
               , containers
               , ansi-wl-pprint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spyder.hs -fno-warn-missing-signatures -fno-warn-dodgy-exports -fno-warn-unused-do-bind
  default-language:    Haskell2010

executable spyder
  hs-source-dirs:      src
  main-is:             Spyder.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spyder.hs -fno-warn-missing-signatures -fno-warn-dodgy-exports -fno-warn-unused-do-bind
  other-modules:
    Language.Spyder.AST
    Language.Spyder.AST.Component
    Language.Spyder.AST.Imp
    Language.Spyder.AST.Spec
    Language.Spyder.Parser
    Language.Spyder.Parser.Lexer
    Language.Spyder.Parser.Parser
    Language.Spyder.Translate
    Language.Spyder.Translate.Desugar
    Language.Spyder.Translate.Main
    Language.Spyder.Translate.Derived
    Language.Spyder.Translate.Rename
  build-depends:       base
                     , spyder
                     , parsec
                     , pretty
                     , language-boogie
                     , containers
  default-language:    Haskell2010

test-suite spyder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:
    ParseTests
  build-depends:       base
                     , spyder
                     , parsec
                     , pretty
                     , language-boogie
                     , containers
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Test.hs -fno-warn-missing-signatures -fno-warn-dodgy-exports -fno-warn-unused-do-bind
  default-language:    Haskell2010

executable spyder-tests
  hs-source-dirs:      test
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Test.hs -fno-warn-missing-signatures -fno-warn-dodgy-exports -fno-warn-unused-do-bind
  build-depends:       base
                     , spyder
                     , parsec
                     , pretty
                     , language-boogie
                     , containers
                     , HUnit
  other-modules: 
    ParseTests
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsarracino/language-typescript
